--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -3,5 +3,11 @@
     "blocks": [
       "rich-text"
     ]
+  },
+  "rich-text": {
+    "props": {
+      "text": "*Hello World!*",
+      "textPosition": "CENTER"
+    }
   }
 }
