--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -2,7 +2,7 @@
   "store.home": { 
     "blocks": [
       "rich-text",
-      "info-card"
+      "info-card#button-right"
     ]
   },
   "rich-text": {
@@ -11,7 +11,7 @@
       "textPosition": "RIGHT"
     }
   },
-  "info-card": {
+  "info-card#button-right": {
     "props": {
       "isFullModeStyle": false,
       "textPosition": "right",
