--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -42,14 +42,14 @@
   "info-card#button-left": {
     "props": {
       "isFullModeStyle": false,
-      "textPosition": "right",
+      "textPosition": "left",
       "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/cozinha-cinza-min.png",
       "headline": "Shining chrome",
       "subhead": "Give your kitchen a cool style adding warm metallic finishes.<br>Available until January 2020",
       "callToActionMode": "Go to Collection",
       "callToActionText": "Explore",
       "callToActionUrl": "/sale/d",
-      "textAlignment": "left of the image"
+      "textAlignment": "center"
     }
   }
 }
