--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -22,7 +22,7 @@
   "info-card#button-left": {
     "props": {
       "isFullModeStyle": false,
-      "textPosition": "left",
+      "textPosition": "Text to the left of the image",
       "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/cozinha-cinza-min.png",
       "headline": "Shining chrome",
       "subhead": "Give your kitchen a cool style adding warm metallic finishes.<br>Available until January 2020",
