--- a/store/blocks/slider-layout.jsonc
+++ b/store/blocks/slider-layout.jsonc
@@ -10,12 +10,12 @@
       },
       "image#brand1": {
         "props": {
-          "src": "https://appliancetheme.vteximg.com.br/arquivos/flatflat-brand-logo-square1.png",
+          "src": "https://appliancetheme.vteximg.com.br/arquivos/flatflat-brand-logo-square1.png"
         }
       },
       "image#brand2": {
         "props": {
-          "src": "https://appliancetheme.vteximg.com.br/arquivos/flatflat-brand-logo-square2.png",
+          "src": "https://appliancetheme.vteximg.com.br/arquivos/flatflat-brand-logo-square2.png"
         }
       }
 }
