--- a/store/blocks/slider-layout.jsonc
+++ b/store/blocks/slider-layout.jsonc
@@ -1,6 +1,6 @@
 {
     "slider-layout#home": {
-        "children": ["image#brand1", "image#brand2"],
+        "children": ["image#brand1", "image#brand2","image#brand3","image#brand4","image#brand5","image#brand6"],
         "props": {
           "autoplay": {
             "timeout": 7000,
@@ -16,6 +16,26 @@
       "image#brand2": {
         "props": {
           "src": "https://appliancetheme.vteximg.com.br/arquivos/flatflat-brand-logo-square2.png"
+        }
+      },
+      "image#brand3": {
+        "props": {
+          "src": "https://appliancetheme.vteximg.com.br/arquivos/flatflat-brand-logo-square3.png"
+        }
+      },
+      "image#brand4": {
+        "props": {
+          "src": "https://appliancetheme.vteximg.com.br/arquivos/flatflat-brand-logo-square4.png"
+        }
+      },
+      "image#brand5": {
+        "props": {
+          "src": "https://appliancetheme.vteximg.com.br/arquivos/flatflat-brand-logo-square5.png"
+        }
+      },
+      "image#brand6": {
+        "props": {
+          "src": "https://appliancetheme.vteximg.com.br/arquivos/flatflat-brand-logo-square6.png"
         }
       }
 }
