--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -98,7 +98,8 @@
       "link": {
         "url": "/small-appliances/coffee-makers"
       } ,
-      "alt": "Coffee Makers Collection"
+      "alt": "Coffee Makers Collection",
+      "maxWidth":"100%"
     }
   },
   "image#mobile": {
@@ -107,7 +108,8 @@
       "link": {
         "url": "/small-appliances/coffee-makers"
       } ,
-      "alt": "Coffee Makers Collection"
+      "alt": "Coffee Makers Collection",
+      "maxWidth":"100%"
     }
   }
 }
