--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -87,7 +87,7 @@
   },
   "rich-text#mobile": {
     "props": {
-      "text": "# Your Coffee, Your Way \n ### New Coffee Makers Collection",
+      "text": "# <h3>Your Coffee, Your Way \n ### <h4> New Coffee Makers Collection",
       "textPosition": "CENTER",
       "textAlignment": "CENTER"
     }
