--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -6,9 +6,7 @@
   },
   "flex-layout.row#main": { 
     "props": { 
-      "marginTop": 6,
-      "verticalAlign": "top",
-      "preventVerticalStretch": false
+      "marginTop": 6
     },
     "children": [
       "flex-layout.col#left",
@@ -21,6 +19,10 @@
     ]
   },
   "flex-layout.col#right": {
+    "props": {
+      "verticalAlign": "top",
+      "preventVerticalStretch": false
+    },
     "children": [
       "product-name",
       "product-price",
