--- a/store/blocks/search.jsonc
+++ b/store/blocks/search.jsonc
@@ -36,6 +36,11 @@
       "width": 20
     }
   },
+  "flex-layout.col#right": {
+    "children": [
+      "search-content"
+    ]
+  },
   "flex-layout.col#search": {
     "children": [
       "filter-navigator.v3"
