--- a/store/blocks/search.jsonc
+++ b/store/blocks/search.jsonc
@@ -22,7 +22,19 @@
   "flex-layout.row#results": {
     "children": [
       "flex-layout.col#filter",
-      "flex-layout.col#search"
+      "flex-layout.col#search",
+      "flex-layout.col#left",
+      "flex-layout.col#right"
+    ]
+  },
+  "flex-layout.col#left": {
+    "children": [
+      "filter-navigator.v3"
+    ]
+  },
+  "flex-layout.col#right": {
+    "children": [
+      "search-content"
     ]
   },
   "flex-layout.row#top": {
